# mdsns_backend

./: .gitignore  Cargo.toml  Cargo.toml.orig  get_firebase_token.py
migrations/2023-02-26-163840_create_user_table/: down.sql  up.sql
migrations/2023-02-26-164904_create_post_table/: down.sql  up.sql
migrations/2023-02-26-165638_create_favorite_table/: down.sql  up.sql
src/: auth.rs  cruds.rs  db.rs  lib.rs  main.rs  middle.rs  models.rs  routers.rs  schema.rs
