[package]
name = "mdsns_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
diesel = { version = "2.0.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenvy = "0.15.6"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
fireauth = "0.1.5"
env_logger = "0.10.0"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
